add blog service

--- a/src/main/resources/templates/BlogForm.html
+++ b/src/main/resources/templates/BlogForm.html
@@ -17,6 +17,7 @@
         <textarea name="content" cols="80" rows="10"></textarea>
         <br/>
         <input type="submit" value="提交"/>
+        <input type="hidden" sec:authentication="name" name="username"/>
     </form>
 </div>
 
