--- a/src/main/resources/templates/BlogForm.html
+++ b/src/main/resources/templates/BlogForm.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="UTF-8"/>
     <title>BlogForm</title>
+    <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet"/>
+    <style>
+    </style>
 </head>
 <body>
-<div>
-    Hello,<span sec:authentication="name">someone</span>
-    <form th:method="post" th:action="@{/blog/create}">
-        标题:<input type="text" name="title"/>
+<div th:fragment="edit" class="container-fluid well">
+    <form sec:authorize="isAuthenticated()" th:method="post" th:action="@{/blog/create}">
+
+        <div class="row">
+            <div class="col-md-8">
+                标题:
+                <input type="text" name="title" size="93"/>
+            </div>
+        </div>
+
         <br/>
-        内容:
+
+        <div class="row">
+            <div class="col-md-4">
+                内容:
+            </div>
+        </div>
         <br/>
-        <textarea name="content" cols="80" rows="10"></textarea>
+        <div class="row">
+            <div class="col-md-8">
+                <textarea name="content" cols="100" rows="10"></textarea>
+            </div>
+        </div>
         <br/>
-        <input type="hidden" th:value="${#authentication.name}" name="username"/>
-        <input type="submit" value="提交"/>
+        <button class="btn btn-lg btn-primary" type="submit"><i class="fa fa-paper-plane"></i> 提交</button>
+
     </form>
 </div>
 
