--- a/src/main/resources/templates/Blog.html
+++ b/src/main/resources/templates/Blog.html
@@ -7,7 +7,9 @@
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+
 <div class="container-fluid col-offset-3">
+
     <div class="row">
         <div class="col-md-8">
             <h1 class="text-center" th:text="${blog.title}"></h1>
@@ -22,7 +24,7 @@
 
     <div class="row">
         <div class="col-md-4">
-            作者:<p th:text="${blog.createBy.name}"></p>
+            作者:<p th:text="${blog.createBy}"></p>
         </div>
 
         <div class="col-md-4">
@@ -30,11 +32,12 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-4" sec:authorize="principal.username==#httpServletRequest.getAttribute('blog').createBy.name || hasRole('ADMIN')">
+    <div class="row" sec:authorize="isAuthenticated()">
+        <div class="col-md-4" sec:authorize="principal.username==#httpServletRequest.getAttribute('blog').createBy || hasRole('ADMIN')">
             <a th:href="${'/blog/delete/'+blog.id}" th:text="删除" />
         </div>
     </div>
 </div>
+
 </body>
 </html>
